Add romantic message to YES response

--- a/valentine/index.html
+++ b/valentine/index.html
@@ -331,7 +331,7 @@
             <p style="margin-top: 15px; font-size: 2em;">💑💕🌹</p>
 
             <!-- Text message button -->
-            <a href="sms:?&body=I%20said%20YES!%20%F0%9F%92%95%20-Hughes" class="message-btn">
+            <a href="sms:?&body=I%20want%20you.%20So%20badly.%0A%0AAnd%20I'll%20love%20you%20until%20I%20take%20my%20last%20breath.%20That's%20my%20promise%20to%20you.%0A%0AForever%20yours%20%F0%9F%92%95%0A-Hughes" class="message-btn">
                 Let him know! 📱
             </a>
         </div>
