Move romantic message to celebration page

--- a/valentine/index.html
+++ b/valentine/index.html
@@ -323,6 +323,12 @@
         <div class="celebration-content">
             <h2>🎉 YAAAY! 🎉</h2>
             <p>We're so happy! 💖✨</p>
+            <p style="font-size: 1.2em; margin-top: 20px; line-height: 1.6;">
+                I want you. So badly.<br><br>
+                And I'll love you until I take my last breath.<br>
+                That's my promise to you.<br><br>
+                Forever yours 💕
+            </p>
             <div class="dog-container">
                 <div class="dog">🐶</div>
                 <div class="dog-tag">BEAU</div>
@@ -331,7 +337,7 @@
             <p style="margin-top: 15px; font-size: 2em;">💑💕🌹</p>
 
             <!-- Text message button -->
-            <a href="sms:?&body=I%20want%20you.%20So%20badly.%0A%0AAnd%20I'll%20love%20you%20until%20I%20take%20my%20last%20breath.%20That's%20my%20promise%20to%20you.%0A%0AForever%20yours%20%F0%9F%92%95%0A-Jelphis" class="message-btn">
+            <a href="sms:?&body=I%20said%20YES!%20%F0%9F%92%95%0A-Hughes" class="message-btn">
                 Let him know! 📱
             </a>
         </div>
